# Byakugan

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-03-31-byakugan-v03-design.md
src/byakugan/: cli.py  hook_runner.py
src/byakugan/commands/: add.py  deinit.py  doctor.py  handoff.py  init.py  list_cmd.py  memories.py  remember.py  remove.py  session.py  status.py  sync.py  update.py
src/byakugan/core/: adapter.py  claude_md.py  compression.py  config.py  database.py  detector.py  gitflow.py  hooks.py  memory.py  superpowers.py
src/byakugan/skills/: __init__.py  gitflow-workflow.md  model-selection.md
src/byakugan/templates/languages/: c.md  cpp.md  css.md  go.md  java.md  javascript.md  kotlin.md  php.md  python.md  ruby.md  rust.md  swift.md  typescript.md
src/byakugan/templates/project-types/: api-service.md  cli-tool.md  data-engineering.md  desktop-app.md  devops-infrastructure.md  fullstack-web.md  library-sdk.md  llm-project.md  ml-project.md  mobile-app.md  web-backend.md  web-frontend.md
src/byakugan/templates/specialized/: ai-usage-policy.md  api-design.md  code-review.md  code-simplification.md  database-design.md  debugging.md  gitflow-workflow.md  performance-optimization.md  refactoring.md  security-check.md  testing-strategy.md
tests/: conftest.py  test_compression.py  test_database.py  test_gitflow.py  test_hook_runner.py  test_hooks.py  test_integration.py  test_superpowers.py
