[project]
name = "byakugan"
version = "0.3.0"
description = "Active guidelines and memory system for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "tomli-w>=1.0",
    "questionary>=2.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-tmp-files>=0.0.2"]

[project.scripts]
byakugan = "byakugan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/byakugan"]
